[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/triskele/DefaultTheme.theme" type="Theme" id=1]
[ext_resource path="res://addons/triskele/Scenes/TrisNodes/Options.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="Option" type="GraphNode" groups=[
"trisnode",
]]
margin_right = 250.0
margin_bottom = 30.0
theme = ExtResource( 1 )
title = "Option"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopBar" type="HBoxContainer" parent="."]
margin_left = 28.0
margin_top = 24.0
margin_right = 222.0
margin_bottom = 48.0

[node name="UseConditions" type="CheckBox" parent="TopBar"]
margin_right = 24.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="TopBar"]
margin_left = 28.0
margin_top = 1.0
margin_right = 133.0
margin_bottom = 23.0
size_flags_horizontal = 3
text = "Use Conditions"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="TopBar"]
margin_left = 137.0
margin_right = 149.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 1 )

[node name="AddButton" type="Button" parent="TopBar"]
margin_left = 153.0
margin_right = 173.0
margin_bottom = 24.0
text = "+"

[node name="RemoveButton" type="Button" parent="TopBar"]
margin_left = 177.0
margin_right = 194.0
margin_bottom = 24.0
text = "-"
[connection signal="toggled" from="TopBar/UseConditions" to="." method="_on_UseConditions_toggled"]
[connection signal="pressed" from="TopBar/AddButton" to="." method="_on_AddButton_pressed"]
[connection signal="pressed" from="TopBar/RemoveButton" to="." method="_on_RemoveButton_pressed"]
